--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -10,22 +8,30 @@
 
 # production
 /dist
+/build
+/www
 
-# misc
+# Firebase Emulator & Admin SDK
+firebase-debug.log
+firebase-debug.*
+firebase-export/         # export/import data for emulators
+serviceAccountKey.json   # never commit service keys!
+.env
+.env.*                   # catch all .env variants
+!.env.example            # allow tracked template
+
+# Editor settings
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-/.nx
-/.nx/cache
 /.vscode/*
 !/.vscode/extensions.json
 .idea
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.nx
+.nx/cache
 
 # Optional eslint cache
 .eslintcache
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
