--- a/firebase.json
+++ b/firebase.json
@@ -33,7 +33,7 @@
       "port": 9000
     },
     "ui": {
-      "enabled": true
+      "enabled": true, "port": 4000
     },
     "singleProjectMode": true
   }
